# 368_warlight

./: .gitignore  Attack.cpp  Attack.h  Bot.cpp  Bot.h  CMakeLists.txt  Defense.cpp  Defense.h  Final_report.docx  General.cpp  General.h  Makefile  Move.h  MoveGenerator.h  Parser.cpp  Parser.h  README.md  Region.cpp  Region.h  SuperRegion.cpp  SuperRegion.h  _zip.py  bad test game  bot  main.cpp  main.h
tools/: StringManipulation.h
vbos-wl2_engine-8b13982d8890/: .hg_archival.txt  LICENSE  README.md  bot  createmap.py  err.txt  map-template.html  map_0.dot  out.txt  run_simulate  rungames.py  runwl2.sh  sources.txt  wl2dot.py
vbos-wl2_engine-8b13982d8890/src/com/theaigames/engine/: Engine.java  Logic.java
vbos-wl2_engine-8b13982d8890/src/com/theaigames/engine/io/: BotCommunication.java  IOPlayer.java
vbos-wl2_engine-8b13982d8890/src/com/theaigames/game/warlight2/: IncorrectPlayerCountException.java  Parser.java  Warlight2.java
vbos-wl2_engine-8b13982d8890/src/com/theaigames/game/warlight2/map/: Map.java
vbos-wl2_engine-8b13982d8890/src/com/theaigames/game/warlight2/move/: AttackTransferMove.java  Move.java  MoveQueue.java  MoveResult.java  PlaceArmiesMove.java
